[gd_scene load_steps=5 format=3 uid="uid://cvg0ov6vkyd33"]

[ext_resource type="Script" uid="uid://ro88xypmhe40" path="res://Scripts/slot_machine_ui.gd" id="1_1hbnv"]
[ext_resource type="Texture2D" uid="uid://bro2msl27mi83" path="res://Assets/slot-machine1.png" id="2_12ki6"]
[ext_resource type="PackedScene" uid="uid://c3c2cqtdm7tb5" path="res://Scene/reel.tscn" id="3_tkkt3"]
[ext_resource type="Texture2D" uid="uid://ojkg8ilbedkj" path="res://Assets/slot-machine2.png" id="4_0bnua"]

[node name="slot_machine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1hbnv")

[node name="Slot-machine1" type="Sprite2D" parent="."]
position = Vector2(880, 326)
texture = ExtResource("2_12ki6")

[node name="ReelContainer1" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_right = -158.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reel" parent="ReelContainer1" instance=ExtResource("3_tkkt3")]
position = Vector2(47, 45)

[node name="ReelContainer2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Reel" parent="ReelContainer2" instance=ExtResource("3_tkkt3")]
position = Vector2(18, 45)
reelID = 2

[node name="ReelContainer3" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 130.0
offset_right = 165.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reel" parent="ReelContainer3" instance=ExtResource("3_tkkt3")]
position = Vector2(19, 45)
reelID = 3

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 259.0
offset_top = -324.0
offset_right = 388.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
icon = ExtResource("4_0bnua")

[node name="betAmount" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -149.0
offset_right = 202.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
max_value = 10000.0
value = 1000.0
alignment = 1

[node name="Result" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = 269.0
offset_right = 291.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "RESULT"
horizontal_alignment = 1

[connection signal="button_up" from="Button" to="." method="_on_spin_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
